samples/helloworld/.generated/helloworld.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: helloworld
    service: helloworld
  name: helloworld
spec:
  ports:
    - name: http
      port: 5000
  selector:
    app: helloworld
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: helloworld
    version: v1
  name: helloworld-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworld
      version: v1
  template:
    metadata:
      labels:
        app: helloworld
        version: v1
    spec:
      containers:
        - image: registry.istio.io/release/examples-helloworld-v1:1.0
          imagePullPolicy: IfNotPresent
          name: helloworld
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: 100m
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: helloworld
    version: v2
  name: helloworld-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworld
      version: v2
  template:
    metadata:
      labels:
        app: helloworld
        version: v2
    spec:
      containers:
        - image: registry.istio.io/release/examples-helloworld-v2:1.0
          imagePullPolicy: IfNotPresent
          name: helloworld
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: 100m
